prov/shm: switch all shm resources to sender side
Switch to using all sender managed resources, eliminating any
access control for resource allocation (command queue is
still shared but managed through atomics on the write side

Signed-off-by: Alexia Ingerson <alexia.ingerson@intel.com>

--- a/prov/shm/Makefile.include
+++ b/prov/shm/Makefile.include
@@ -14,11 +14,13 @@ _shm_files = \
 	prov/shm/src/smr_init.c		\
 	prov/shm/src/smr_av.c		\
 	prov/shm/src/smr_signal.h	\
-	prov/shm/src/smr.h		\
-	prov/shm/src/smr_dsa.h		\
-	prov/shm/src/smr_dsa.c		\
+	prov/shm/src/smr_signal.h	\
+	prov/shm/src/smr_util.c		\
 	prov/shm/src/smr_util.h		\
-	prov/shm/src/smr_util.c
+	prov/shm/src/smr.h		\
+	prov/shm/src/smr_fifo.h		\
+	prov/shm/src/smr_dsa.h		\
+	prov/shm/src/smr_dsa.c
 
 
 
