--- a/prov/shm/Makefile.include
+++ b/prov/shm/Makefile.include
@@ -14,6 +14,7 @@ _shm_files = \
 	prov/shm/src/smr_init.c		\
 	prov/shm/src/smr_av.c		\
 	prov/shm/src/smr_signal.h	\
+	prov/shm/src/smr_fifo.h		\
 	prov/shm/src/smr.h		\
 	prov/shm/src/smr_dsa.c		\
 	prov/shm/src/smr_util.h		\
